// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ZoomBasedMarkers SymbolsForDifferentZoomLevels smoke-test 1`] = `
<div class="styled__StoryMapContainer-sc-12kjso7-6 dDcUzV">
  <div class="maplibregl-map mapboxgl-map"
       style="position: relative; width: 100%; height: 100%;"
  >
    <div class="maplibregl-canvas-container mapboxgl-canvas-container maplibregl-interactive mapboxgl-interactive maplibregl-touch-drag-pan mapboxgl-touch-drag-pan maplibregl-touch-zoom-rotate mapboxgl-touch-zoom-rotate">
      <canvas class="maplibregl-canvas mapboxgl-canvas"
              tabindex="0"
              aria-label="Map"
              role="region"
              width="1248"
              height="648"
              style="width: 1248px; height: 648px;"
      >
      </canvas>
      <div class="maplibregl-marker mapboxgl-marker maplibregl-marker-anchor-center mapboxgl-marker-anchor-center"
           style="transform: translate(-50%, -50%) translate(670px, 331px) rotateX(0deg) rotateZ(0deg); cursor: inherit;"
      >
        <span>
          <div color="#00FF00"
               size="15"
               class="styled__LeafletStyleMarker-sc-12kjso7-4 cppaNi"
          >
          </div>
        </span>
      </div>
      <div class="maplibregl-marker mapboxgl-marker maplibregl-marker-anchor-center mapboxgl-marker-anchor-center"
           style="transform: translate(-50%, -50%) translate(624px, 324px) rotateX(0deg) rotateZ(0deg); cursor: inherit;"
      >
        <span>
          <div color="#00FF00"
               size="15"
               class="styled__LeafletStyleMarker-sc-12kjso7-4 cppaNi"
          >
          </div>
        </span>
      </div>
      <div class="maplibregl-marker mapboxgl-marker maplibregl-marker-anchor-center mapboxgl-marker-anchor-center"
           style="transform: translate(-50%, -50%) translate(626px, 322px) rotateX(0deg) rotateZ(0deg); cursor: inherit;"
      >
        <span>
          <div color="#00FF00"
               size="15"
               class="styled__LeafletStyleMarker-sc-12kjso7-4 cppaNi"
          >
          </div>
        </span>
      </div>
    </div>
    <div class="maplibregl-control-container mapboxgl-control-container">
      <div class="maplibregl-ctrl-top-left mapboxgl-ctrl-top-left">
      </div>
      <div class="maplibregl-ctrl-top-right mapboxgl-ctrl-top-right">
      </div>
      <div class="maplibregl-ctrl-bottom-left mapboxgl-ctrl-bottom-left">
      </div>
      <div class="maplibregl-ctrl-bottom-right mapboxgl-ctrl-bottom-right">
        <details class="maplibregl-ctrl maplibregl-ctrl-attrib mapboxgl-ctrl mapboxgl-ctrl-attrib maplibregl-attrib-empty mapboxgl-attrib-empty"
                 open
        >
          <summary class="maplibregl-ctrl-attrib-button mapboxgl-ctrl-attrib-button"
                   title="Toggle attribution"
                   aria-label="Toggle attribution"
          >
          </summary>
          <div class="maplibregl-ctrl-attrib-inner mapboxgl-ctrl-attrib-inner">
          </div>
        </details>
      </div>
    </div>
  </div>
</div>
`;

exports[`ZoomBasedMarkers TransformedSymbols smoke-test 1`] = `
<div class="styled__StoryMapContainer-sc-12kjso7-6 dDcUzV">
  <div class="maplibregl-map mapboxgl-map"
       style="position: relative; width: 100%; height: 100%;"
  >
    <div class="maplibregl-canvas-container mapboxgl-canvas-container maplibregl-interactive mapboxgl-interactive maplibregl-touch-drag-pan mapboxgl-touch-drag-pan maplibregl-touch-zoom-rotate mapboxgl-touch-zoom-rotate">
      <canvas class="maplibregl-canvas mapboxgl-canvas"
              tabindex="0"
              aria-label="Map"
              role="region"
              width="1248"
              height="648"
              style="width: 1248px; height: 648px;"
      >
      </canvas>
      <div class="maplibregl-marker mapboxgl-marker maplibregl-marker-anchor-center mapboxgl-marker-anchor-center"
           style="transform: translate(-50%, -50%) translate(670px, 331px) rotateX(0deg) rotateZ(0deg); cursor: pointer;"
      >
        <span>
          <div color="#00FF00"
               size="15"
               class="styled__LeafletStyleMarker-sc-12kjso7-4 cppaNi"
          >
          </div>
        </span>
      </div>
      <div class="maplibregl-marker mapboxgl-marker maplibregl-marker-anchor-center mapboxgl-marker-anchor-center"
           style="transform: translate(-50%, -50%) translate(624px, 324px) rotateX(0deg) rotateZ(0deg); cursor: pointer;"
      >
        <span>
          <div color="#00FF00"
               size="15"
               class="styled__LeafletStyleMarker-sc-12kjso7-4 cppaNi"
          >
          </div>
        </span>
      </div>
      <div class="maplibregl-marker mapboxgl-marker maplibregl-marker-anchor-center mapboxgl-marker-anchor-center"
           style="transform: translate(-50%, -50%) translate(626px, 322px) rotateX(0deg) rotateZ(0deg); cursor: pointer;"
      >
        <span>
          <div color="#00FF00"
               size="15"
               class="styled__LeafletStyleMarker-sc-12kjso7-4 cppaNi"
          >
          </div>
        </span>
      </div>
    </div>
    <div class="maplibregl-control-container mapboxgl-control-container">
      <div class="maplibregl-ctrl-top-left mapboxgl-ctrl-top-left">
      </div>
      <div class="maplibregl-ctrl-top-right mapboxgl-ctrl-top-right">
      </div>
      <div class="maplibregl-ctrl-bottom-left mapboxgl-ctrl-bottom-left">
      </div>
      <div class="maplibregl-ctrl-bottom-right mapboxgl-ctrl-bottom-right">
        <details class="maplibregl-ctrl maplibregl-ctrl-attrib mapboxgl-ctrl mapboxgl-ctrl-attrib"
                 open
        >
          <summary class="maplibregl-ctrl-attrib-button mapboxgl-ctrl-attrib-button"
                   title="Toggle attribution"
                   aria-label="Toggle attribution"
          >
          </summary>
          <div class="maplibregl-ctrl-attrib-inner mapboxgl-ctrl-attrib-inner">
            ©
            <a href="https://carto.com/about-carto/"
               target="_blank"
               rel="noopener"
            >
              CARTO
            </a>
            , ©
            <a href="http://www.openstreetmap.org/about/"
               target="_blank"
            >
              OpenStreetMap
            </a>
            contributors
          </div>
        </details>
      </div>
    </div>
  </div>
</div>
`;
